examples/test/testpolicy19755.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19755
  namespace: namespace70
spec:
  podSelector:
    matchLabels:
      key20: value37
      key27: value21
      key34: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key4: value41
      podSelector:
        matchLabels:
          key16: value23
          key17: value35
          key29: value17
